# cache-friendly-samples

./: .gitignore  CMakeLists.txt  PerfProfiling.cmake  commands.txt  heap_aux.cpp  linear_array.cpp  my_linear_array.cpp  my_linear_array2.cpp
arrays/: CMakeLists.txt  PerfProfiling.cmake  common.h  linear_array.cpp  memmove_linear_array.h  memmove_linear_array_main.cpp  move_backward_linear_array.h  move_backward_linear_array_main.cpp  my_blinear_array.h  my_linear_array.cpp  simple_linear_array.cpp  simple_linear_array.h  simple_linear_array_main.cpp  test_linear_array.cpp
project/: bheap_aux.cpp  order.txt
study_counters/: CMakeLists.txt  less.cpp  list_event  more.cpp
study_counters/study_counters/: CMakeLists.txt
